fix: improve alignment by adding Flexbox container to separate signup form from navigation

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,36 +1,68 @@
-body {
-    font-family: "Montserrat", sans-serif;
-    background-color: #f4f4f9;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
 
+/* Centering and Styling Contact Form Container */
+.contact-form-container {
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    margin-top: 2rem; 
+}
+  
 .container {
+    width: 40%;
+    max-width: 800px; 
+    padding: 3rem;
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    width: 100%;
-    max-width: 500px;
+    min-width: 320px; /* Ensures a minimum width on smaller screens */
 }
-
-h2 {
-    margin-top: 0;
+  
+body {
+    font-family: 'Montserrat', sans-serif;
+    line-height: 1.6;
+    color: #555;
+}
+  
+.head {
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    justify-content: space-between;
+    height: 9.6rem;
+    padding: 0 4.8rem;
+}
+  
+.logo {
+    height: 129px;
+}
+  
+.navbar {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+  
+.navlink {
+    text-decoration: none;
     color: #333;
-    text-align: center;
+    font-weight: 600;
+    font-size: 18px;
+    transition: color 0.3s;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
 }
-
+  
+.navlink:hover {
+    color: #8fb453;
+}
+  
 label {
     display: block;
     margin-bottom: 8px;
     color: #555;
     font-weight: bold;
 }
-
+  
 input[type="text"],
 input[type="email"] {
     width: calc(100% - 22px);
@@ -40,22 +72,24 @@ input[type="email"] {
     border-radius: 4px;
     box-sizing: border-box;
 }
-
+  
 input[type="submit"] {
     width: 100%;
     padding: 10px;
-    background-color: #96c945;;
+    background-color: #96c945;
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.3s;
+    margin-bottom: 3rem; 
 }
-
+  
 input[type="submit"]:hover {
-    background-color:  #bbe675;;
+    background-color: #bbe675;
 }
+  
 .subheader {
     font-size: 25px;
     font-weight: 550;
@@ -64,11 +98,7 @@ input[type="submit"]:hover {
     text-transform: uppercase;
     letter-spacing: 1px;
 }
+  
 .form-group {
     margin-bottom: 15px;
-}
-
-.form-group input[type="text"],
-.form-group input[type="email"] {
-    width: 100%;
 }
